# Multi-Array-Calib

./: .gitignore  ApproxRE.m  BuildMexFiles.m  CalibPath.m  Copy_of_ApproxRE.m  Copy_of_TestPlot.m  Copy_of_Test_1_Two_Sensors.m  Copy_of_Test_4_Full_Kitti_Opt.m  CorrectTimestamps.m  EasyScale.asv  EasyScale.m  FordCam3Data.mat  FordCam5Data.mat  GenMovie.m  GenTforms.m  KittiCam1Data.mat  KittiVelData.mat  KittiVelData2.mat  LoadSensorData.m  MiscRun.m  Plot_1_Two_Sensors.m  Plot_2_Shrimp_Cameras.m  README.md  RandTformTimes.asv  RandTformTimes.m  ReCal.m  RejectPoints.m  Run.m  RunTests.m  SampleData.m  SolveScale.m  SolveScale2.m  SolveScale3.m  SolveScale4.m  T2V.asv  T2V.m  TDiff.m  TestAprox.m  TestBasic.m  TestPlot.m  (+69 more)
Copy_of_genCam/: EstPointVar.m  FordCamInfo.m  Fundmatrix.m  GetCamTform.m  ReadKittiTimestamps.m  Undistort.m  ladybugToCylinder.m
Results/: Test_1_Res.mat  Test_4_Res.mat  Test_5_Res.mat  Test_5_Res2.mat  Test_9_Res.mat
StoredTforms/: FordCam1Data.mat  FordCam2Data.mat  FordCam3Data.mat  FordCam4Data.mat  FordCam5Data.mat  FordVelData.mat  KittiCam1Data.mat  KittiCam2Data.mat  KittiCam3Data.mat  KittiCam4Data.mat  KittiVelData.mat  KittiVelDataOld.mat  ShrimpCam2Data.mat  ShrimpCam3Data.mat  ShrimpCam4Data.mat  ShrimpNavData.mat  ShrimpVelData.mat  ShrimpVelData2.mat  kittiCam1Data.mat  kittiCam1Data2.mat  kittiCam4Data.mat  kittiVelData.mat  shrimpCam1Data.mat  shrimpCam3Data.mat  shrimpCam5Data.mat  shrimpVelData.mat  shrimpVelData2.mat
finalClean/: CalcSensorOverlap.m  OptR.m  OptT.m~  RoughT.m  metricRefine.m  optR.m  optT.m  randTformsTime.m  roughR.m
genCam/: CamInfo.m  EstPointVar.m  FindCamVar.m  FordCamInfo.m  GenCam.m  GetCamTform.m  GetCamTform3.m  KittiCamInfo.m  ShrimpCamInfo.m  Undistort.m  freadstruct.m  genFordCam.m  genKittiCam.m
genFordNav/: genShrimpNav.m
genFordVel/: genFordVel.m  getTvel.m
genKittiCam/: ReadKittiTimestamps.m  getTcam.m
genKittiVel/: findPointNormals.m  genKittiVel.m  getTime.m  getTvel.m  planePoint.m  tformInterp3.mexa64
genNav/: FordNavInfo.m  GenNav.m  KittiNavInfo.m  ReadNavData.m  ShrimpNavInfo.m  coTest.m  quat2rot.m  sizeof.m
genShrimpCam/: genShrimpCam.m
genShrimpVel/: genShrimpVel.m
genVIO/: GenVIO.m  VIOInfo.m
genVel/: FindValVar.m  FindVelTimingMatrix.m  FordVelInfo.m  GenVel.m  GenVelTimeFrac.m  GetVelTform.m  KittiVelInfo.m  ReadPly.m  ReadTimeData.m  ReadVelData.m  ShrimpVelInfo.m  SubVel.m  VelCorrect.m  findPointNormals.m  genKittiVel.m  icpMex.mexw64  readTimeData.m
genVicon/: GenVicon.m  ViconInfo.m
handEye/: Copy_of_SystemProbT.m  ErrorEstCR.asv  ErrorEstCR.m  ErrorEstCR2.m  ErrorEstCRT.m  ErrorEstCT.m  ErrorEstCT2.m  ErrorEstCT3.m  ErrorEstR.m  ErrorEstT.m  ErrorEstT3.m  OptR.m  OptT.asv  OptT.m  OptTG.m  PlotData.asv  dV.cpp  (+34 more)
rosMsgs/ros_vrpn_client/: .gitignore  CMakeLists.txt  README.md  package.xml
rosMsgs/ros_vrpn_client/include/: vicon_estimator.h  vicon_odometry_estimator.h
rosMsgs/ros_vrpn_client/msg/: viconEstimator.msg
(+338 files in other folders)
