<?xml version="1.0"?>
<package>
  <name>ros_vrpn_client</name>
  <version>0.0.0</version>
  <description>
     ROS node which is a client for Virtual Reality Peripheral
     Networks and publishes a TF frame and TransformStamped for
     tracked bodies.

     Tested with the Optitrak motion capture system from NaturalPoint.
  </description>
  <url></url>
  <author>Advait Jain, Chi-Hung King, Advisor: Prof. Charlie Kemp, Lab: Healthcare Robotics Lab at Georgia Tech</author>
  <maintainer email="pascal.gohl@mavt.ethz.ch">Pascal Gohl</maintainer>
  <license>New BSD</license>

  <!-- Dependencies which this package needs to build itself. -->
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

</package>
